--- a/meta_noughts_and_crosses/dev_notebook.ipynb
+++ b/meta_noughts_and_crosses/dev_notebook.ipynb
@@ -16,17 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from warnings import warn"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +34,7 @@
        "array([' ', ' ', ' ', ' ', 'X', ' ', 'O', ' ', ' '], dtype='<U1')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +57,7 @@
        "(array([0, 1, 2, 3, 5, 7, 8]),)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +68,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.all(s[[2,4,6]] == ' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,6 +106,8 @@
     "    def __init__(self) -> None:\n",
     "        self.state = np.full(9, ' ', dtype=str)\n",
     "        self.player_states = ['X', 'O']\n",
+    "        self.decided = False\n",
+    "        self.won_by = None\n",
     "        \n",
     "    def get_state(self):\n",
     "        \"\"\"Get the current state of the board\"\"\"\n",
@@ -96,6 +117,17 @@
     "        \"\"\"Get the available positions to play\"\"\"\n",
     "        return np.where(self.state==' ')\n",
     "    \n",
+    "    def check_if_won(self):\n",
+    "        \"\"\"Check if a player has won, return which player has won.\"\"\"\n",
+    "        win_cons = np.array([[0,1,2],[3,4,5],[6,7,8],[0,3,6],[1,4,7],[2,5,8],[0,4,8],[2,4,6]])\n",
+    "        for win_con in win_cons:\n",
+    "            if np.all(self.state[win_con] == 'X'):\n",
+    "                return 0\n",
+    "            elif np.all(self.state[win_con] == 'O'):\n",
+    "                return 1\n",
+    "        \n",
+    "        return None\n",
+    "    \n",
     "    def update_state(self, position: int, player: int):\n",
     "        \"\"\"Update the state of the board based on the position\n",
     "\n",
@@ -104,16 +136,23 @@
     "            player: which player is making a move, int=[0,1]\n",
     "        \"\"\"\n",
     "        if self.state[position] != ' ':\n",
-    "            warn('Position already taken!')\n",
-    "            return 1\n",
+    "            print('Position already taken! Try again!')\n",
+    "            return\n",
     "        \n",
     "        self.state[position] = self.player_states[player]\n",
+    "        \n",
+    "        player_win = self.check_if_won()\n",
+    "        if player_win is not None:\n",
+    "            self.state = np.full(9, self.player_states[player_win])\n",
+    "        \n",
+    "    \n",
+    "        \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,37 +164,29 @@
     "    Args:\n",
     "        state: the state of the board as a flattened vector.\n",
     "    \"\"\"\n",
-    "    horizontal_line = '-|-|-'\n",
+    "    # Check for won state to print big version\n",
+    "    if np.all(state == 'X'):\n",
+    "        print('\\   /\\n \\ / \\n  X  \\n / \\ \\n/   \\ ')\n",
+    "        return \n",
+    "    elif np.all(state == 'O'):\n",
+    "        print('/ - \\ \\n|   |\\n|   |\\n|   |\\n\\ _ /')\n",
+    "        return\n",
+    "      \n",
+    "    horizontal_line = \"-|-|-\"\n",
+    "\n",
     "    def vertical_line(start_ind):\n",
-    "        return f'{state[start_ind]}|{state[start_ind+1]}|{state[start_ind+2]} '\n",
+    "        return f\"{state[start_ind]}|{state[start_ind+1]}|{state[start_ind+2]} \"\n",
+    "\n",
+    "    print(\n",
+    "        f\"{vertical_line(0)}\\n{horizontal_line}\\n{vertical_line(3)}\\n{horizontal_line}\\n{vertical_line(6)}\"\n",
+    "    )\n",
     "    \n",
-    "    print(f'{vertical_line(0)}\\n{horizontal_line}\\n{vertical_line(3)}\\n{horizontal_line}\\n{vertical_line(6)}')"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " | |  \n",
-      "-|-|-\n",
-      " |X|  \n",
-      "-|-|-\n",
-      "O| |  \n"
-     ]
-    }
-   ],
-   "source": [
-    "small_board_print(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +204,7 @@
        "array([' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' '], dtype='<U1')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +224,7 @@
        "(array([0, 1, 2, 3, 4, 5, 6, 7, 8]),)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -234,14 +265,97 @@
      "text": [
       " | |  \n",
       "-|-|-\n",
-      " |X|  \n",
+      " |O|  \n",
       "-|-|-\n",
       " | |  \n"
      ]
     }
    ],
    "source": [
-    "test_board.update_state(4, 0)\n",
+    "test_board.update_state(4, 1)\n",
+    "small_board_print(test_board.get_state())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Position already taken! Try again!\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_board.update_state(4, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O| |  \n",
+      "-|-|-\n",
+      " |O|  \n",
+      "-|-|-\n",
+      " | |  \n"
+     ]
+    }
+   ],
+   "source": [
+    "test_board.update_state(0, 1)\n",
+    "small_board_print(test_board.get_state())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O| |  \n",
+      "-|-|-\n",
+      "O|O|  \n",
+      "-|-|-\n",
+      " | |  \n"
+     ]
+    }
+   ],
+   "source": [
+    "test_board.update_state(3, 1)\n",
+    "small_board_print(test_board.get_state())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/ - \\ \n",
+      "|   |\n",
+      "|   |\n",
+      "|   |\n",
+      "\\ _ /\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_board.update_state(6, 1)\n",
     "small_board_print(test_board.get_state())"
    ]
   },
