--- a/meta_noughts_and_crosses/dev_notebook.ipynb
+++ b/meta_noughts_and_crosses/dev_notebook.ipynb
@@ -16,11 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "np.set_printoptions(edgeitems=30, linewidth=100000, \n",
+    "    formatter=dict(float=lambda x: \"%.3g\" % x))"
    ]
   },
   {
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +79,7 @@
        "False"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,6 +189,192 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "So this works for a playable version of the small game, what about a big game? Lets start with the printer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def small_game_formatter(state):\n",
+    "    \"\"\"Format the values of a small game into sensible thing to pass to the big printer\"\"\"\n",
+    "    print_array = np.full((5,5), ' ', dtype=str)\n",
+    "    if np.all(state == 'X'):\n",
+    "        print_array = np.array([['\\\\',' ',' ',' ','/'],\n",
+    "                                [' ','\\\\',' ','/',' '],\n",
+    "                                [' ',' ','X',' ',' '],\n",
+    "                                [' ','/',' ','\\\\',' '],\n",
+    "                                ['/',' ',' ',' ','\\\\']]) \n",
+    "        return print_array\n",
+    "    elif np.all(state == 'O'):\n",
+    "        print_array = np.array([['/',' ','-',' ','\\\\'],\n",
+    "                                ['|',' ',' ',' ','|'],\n",
+    "                                ['|',' ','O',' ','|'],\n",
+    "                                ['|',' ',' ',' ','|'],\n",
+    "                                ['\\\\',' ','-',' ','/']])\n",
+    "        return print_array\n",
+    "    \n",
+    "    horizontal_line = np.array(['-','|','-','|','-'])\n",
+    "    \n",
+    "    def val_line(ind_start):\n",
+    "        return np.array([state[ind_start], '|', state[ind_start + 1], '|', state[ind_start+2]])\n",
+    "    \n",
+    "    for idx, _ in enumerate(print_array):\n",
+    "        if idx % 2 ==0:\n",
+    "            print_array[idx] = val_line(int(idx * 1.5))\n",
+    "        else:\n",
+    "            print_array[idx] = horizontal_line\n",
+    "            \n",
+    "    return print_array\n",
+    "\n",
+    "def big_game_print(states: np.ndarray):\n",
+    "    \"\"\"Print a big game made of small games, on an input of their states\n",
+    "    \n",
+    "    states: (9, 9)\n",
+    "    \"\"\"\n",
+    "    print_array = np.full((17,17), ' ', dtype=str)\n",
+    "    \n",
+    "    small_boards = [small_game_formatter(state) for state in states]\n",
+    "    horiz_line = np.full(5, '-', dtype=str)\n",
+    "    \n",
+    "    print_array[0:5,0:5] = small_boards[0]\n",
+    "    print_array[6:11,0:5] = small_boards[1]\n",
+    "    print_array[12:,0:5] = small_boards[2]\n",
+    "    print_array[0:5,6:11] = small_boards[3]\n",
+    "    print_array[6:11,6:11] = small_boards[4]\n",
+    "    print_array[12:,6:11] = small_boards[5]\n",
+    "    print_array[0:5,12:] = small_boards[6]\n",
+    "    print_array[6:11,12:] = small_boards[7]\n",
+    "    print_array[12:,12:] = small_boards[8]\n",
+    "    \n",
+    "    print_array[0:5, 5] = horiz_line\n",
+    "    print_array[6:11, 5] = horiz_line\n",
+    "    print_array[12:, 5] = horiz_line\n",
+    "    print_array[0:5, 11] = horiz_line\n",
+    "    print_array[6:11, 5] = horiz_line\n",
+    "    print_array[12:, 5] = horiz_line\n",
+    "    \n",
+    "    return print_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "small_boards = np.full((9,9), ' ', dtype=str)\n",
+    "print_array = np.full((17,17), '|', dtype=str)\n",
+    "vert_lines = np.full(5, '|', dtype=str).reshape(5,1)\n",
+    "horiz_line = np.full(5, '-', dtype=str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "small_boards= [small_game_formatter(s) for s in small_boards]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_array[0:5,0:5] = small_boards[0]\n",
+    "print_array[6:11,0:5] = small_boards[1]\n",
+    "print_array[12:,0:5] = small_boards[2]\n",
+    "print_array[0:5,6:11] = small_boards[3]\n",
+    "print_array[6:11,6:11] = small_boards[4]\n",
+    "print_array[12:,6:11] = small_boards[5]\n",
+    "print_array[0:5,12:] = small_boards[6]\n",
+    "print_array[6:11,12:] = small_boards[7]\n",
+    "print_array[12:,12:] = small_boards[8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pa[0:5,0:5] = spa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' '],\n",
+       "       ['-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-'],\n",
+       "       [' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' '],\n",
+       "       ['-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-'],\n",
+       "       [' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' '],\n",
+       "       ['|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|'],\n",
+       "       [' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' '],\n",
+       "       ['-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-'],\n",
+       "       [' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' '],\n",
+       "       ['-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-'],\n",
+       "       [' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' '],\n",
+       "       ['|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|'],\n",
+       "       [' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' '],\n",
+       "       ['-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-'],\n",
+       "       [' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' '],\n",
+       "       ['-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-'],\n",
+       "       [' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ']], dtype='<U1')"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/ - \\\n",
+      "|   |\n",
+      "| O |\n",
+      "|   |\n",
+      "\\ - /\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "st = ''\n",
+    "for row in f:\n",
+    "    for element in row:\n",
+    "        st += element\n",
+    "    st += '\\n'\n",
+    "print(st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
