:book: updated notebook

--- a/meta_noughts_and_crosses/dev_notebook.ipynb
+++ b/meta_noughts_and_crosses/dev_notebook.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
     "    \n",
     "    states: (9, 9)\n",
     "    \"\"\"\n",
-    "    print_array = np.full((17,17), ' ', dtype=str)\n",
+    "    print_array = np.full((17,17), '|', dtype=str)\n",
     "    \n",
     "    small_boards = [small_game_formatter(state) for state in states]\n",
     "    horiz_line = np.full(5, '-', dtype=str)\n",
@@ -250,120 +250,103 @@
     "    print_array[6:11,12:] = small_boards[7]\n",
     "    print_array[12:,12:] = small_boards[8]\n",
     "    \n",
-    "    print_array[0:5, 5] = horiz_line\n",
-    "    print_array[6:11, 5] = horiz_line\n",
-    "    print_array[12:, 5] = horiz_line\n",
-    "    print_array[0:5, 11] = horiz_line\n",
-    "    print_array[6:11, 5] = horiz_line\n",
-    "    print_array[12:, 5] = horiz_line\n",
+    "    print_array[5, 0:5] = horiz_line\n",
+    "    print_array[5, 6:11] = horiz_line\n",
+    "    print_array[5, 12:] = horiz_line\n",
+    "    print_array[11, 0:5] = horiz_line\n",
+    "    print_array[11, 6:11] = horiz_line\n",
+    "    print_array[11, 12:] = horiz_line\n",
     "    \n",
     "    return print_array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
-    "small_boards = np.full((9,9), ' ', dtype=str)\n",
-    "print_array = np.full((17,17), '|', dtype=str)\n",
-    "vert_lines = np.full(5, '|', dtype=str).reshape(5,1)\n",
-    "horiz_line = np.full(5, '-', dtype=str)"
+    "states = np.full((9,9), 'O', dtype=str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "small_boards= [small_game_formatter(s) for s in small_boards]"
+    "big_print = big_game_print(states)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print_array[0:5,0:5] = small_boards[0]\n",
-    "print_array[6:11,0:5] = small_boards[1]\n",
-    "print_array[12:,0:5] = small_boards[2]\n",
-    "print_array[0:5,6:11] = small_boards[3]\n",
-    "print_array[6:11,6:11] = small_boards[4]\n",
-    "print_array[12:,6:11] = small_boards[5]\n",
-    "print_array[0:5,12:] = small_boards[6]\n",
-    "print_array[6:11,12:] = small_boards[7]\n",
-    "print_array[12:,12:] = small_boards[8]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pa[0:5,0:5] = spa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' '],\n",
-       "       ['-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-'],\n",
-       "       [' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' '],\n",
-       "       ['-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-'],\n",
-       "       [' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' '],\n",
-       "       ['|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|'],\n",
-       "       [' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' '],\n",
-       "       ['-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-'],\n",
-       "       [' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' '],\n",
-       "       ['-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-'],\n",
-       "       [' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' '],\n",
-       "       ['|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|', '|'],\n",
-       "       [' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' '],\n",
-       "       ['-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-'],\n",
-       "       [' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' '],\n",
-       "       ['-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-', '|', '-'],\n",
-       "       [' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ', '|', ' ']], dtype='<U1')"
+       "array([['/', ' ', '-', ' ', '\\\\', '|', '/', ' ', '-', ' ', '\\\\', '|', '/', ' ', '-', ' ', '\\\\'],\n",
+       "       ['|', ' ', ' ', ' ', '|', '|', '|', ' ', ' ', ' ', '|', '|', '|', ' ', ' ', ' ', '|'],\n",
+       "       ['|', ' ', 'O', ' ', '|', '|', '|', ' ', 'O', ' ', '|', '|', '|', ' ', 'O', ' ', '|'],\n",
+       "       ['|', ' ', ' ', ' ', '|', '|', '|', ' ', ' ', ' ', '|', '|', '|', ' ', ' ', ' ', '|'],\n",
+       "       ['\\\\', ' ', '-', ' ', '/', '|', '\\\\', ' ', '-', ' ', '/', '|', '\\\\', ' ', '-', ' ', '/'],\n",
+       "       ['-', '-', '-', '-', '-', '|', '-', '-', '-', '-', '-', '|', '-', '-', '-', '-', '-'],\n",
+       "       ['/', ' ', '-', ' ', '\\\\', '|', '/', ' ', '-', ' ', '\\\\', '|', '/', ' ', '-', ' ', '\\\\'],\n",
+       "       ['|', ' ', ' ', ' ', '|', '|', '|', ' ', ' ', ' ', '|', '|', '|', ' ', ' ', ' ', '|'],\n",
+       "       ['|', ' ', 'O', ' ', '|', '|', '|', ' ', 'O', ' ', '|', '|', '|', ' ', 'O', ' ', '|'],\n",
+       "       ['|', ' ', ' ', ' ', '|', '|', '|', ' ', ' ', ' ', '|', '|', '|', ' ', ' ', ' ', '|'],\n",
+       "       ['\\\\', ' ', '-', ' ', '/', '|', '\\\\', ' ', '-', ' ', '/', '|', '\\\\', ' ', '-', ' ', '/'],\n",
+       "       ['-', '-', '-', '-', '-', '|', '-', '-', '-', '-', '-', '|', '-', '-', '-', '-', '-'],\n",
+       "       ['/', ' ', '-', ' ', '\\\\', '|', '/', ' ', '-', ' ', '\\\\', '|', '/', ' ', '-', ' ', '\\\\'],\n",
+       "       ['|', ' ', ' ', ' ', '|', '|', '|', ' ', ' ', ' ', '|', '|', '|', ' ', ' ', ' ', '|'],\n",
+       "       ['|', ' ', 'O', ' ', '|', '|', '|', ' ', 'O', ' ', '|', '|', '|', ' ', 'O', ' ', '|'],\n",
+       "       ['|', ' ', ' ', ' ', '|', '|', '|', ' ', ' ', ' ', '|', '|', '|', ' ', ' ', ' ', '|'],\n",
+       "       ['\\\\', ' ', '-', ' ', '/', '|', '\\\\', ' ', '-', ' ', '/', '|', '\\\\', ' ', '-', ' ', '/']], dtype='<U1')"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print_array"
+    "big_print"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/ - \\\n",
-      "|   |\n",
-      "| O |\n",
-      "|   |\n",
-      "\\ - /\n",
+      "/ - \\|/ - \\|/ - \\\n",
+      "|   |||   |||   |\n",
+      "| O ||| O ||| O |\n",
+      "|   |||   |||   |\n",
+      "\\ - /|\\ - /|\\ - /\n",
+      "-----|-----|-----\n",
+      "/ - \\|/ - \\|/ - \\\n",
+      "|   |||   |||   |\n",
+      "| O ||| O ||| O |\n",
+      "|   |||   |||   |\n",
+      "\\ - /|\\ - /|\\ - /\n",
+      "-----|-----|-----\n",
+      "/ - \\|/ - \\|/ - \\\n",
+      "|   |||   |||   |\n",
+      "| O ||| O ||| O |\n",
+      "|   |||   |||   |\n",
+      "\\ - /|\\ - /|\\ - /\n",
       "\n"
      ]
     }
    ],
    "source": [
     "st = ''\n",
-    "for row in f:\n",
+    "for row in big_print:\n",
     "    for element in row:\n",
     "        st += element\n",
     "    st += '\\n'\n",
@@ -372,10 +355,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = SmallBoard()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " | |  \n",
+      "-|-|-\n",
+      " | |  \n",
+      "-|-|-\n",
+      " | |  \n"
+     ]
+    }
+   ],
+   "source": [
+    "small_board_print(s.get_state())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = np.full(9, ' ', dtype=Str)"
+   ]
   }
  ],
  "metadata": {
