:sewing_needle: scripts for playing game

--- a/meta_noughts_and_crosses/dev_notebook.ipynb
+++ b/meta_noughts_and_crosses/dev_notebook.ipynb
@@ -389,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = np.full(9, ' ', dtype=Str)"
+    "s = np.full(9, ' ', dtype=)"
    ]
   }
  ],
